# ChangeLog for games-fps/avp
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-fps/avp/ChangeLog,v 1.16 2015/02/24 05:46:19 mr_bones_ Exp $

*avp-20150214 (24 Feb 2015)

  24 Feb 2015; Michael Sterrett <mr_bones_@gentoo.org> +avp-20150214.ebuild:
  version bump

  03 Jul 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org> avp-20070130-r2.ebuild:
  fixed dependency versions

*avp-20070130-r2 (03 Jul 2014)

  03 Jul 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
  +avp-20070130-r2.ebuild:
  bumped EAPI to 5; converted deps to gx86-multilib

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> avp-20070130-r1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  13 Jun 2009; Tristan Heaven <nyhm@gentoo.org> avp-20070130-r1.ebuild,
  +files/avp-20070130-glibc2.10.patch:
  Fix building with glibc-2.10, bug #273588

  19 Jan 2008; Tristan Heaven <nyhm@gentoo.org> avp-20070130-r1.ebuild:
  Fix deps for amd64, bug #206380

  10 Sep 2007; Tupone Alfredo <tupone@gentoo.org> avp-20070130-r1.ebuild:
  Adding ~amd64 keyword. Bug #192005 by Dizzy

  07 Sep 2007; <tupone@gentoo.org> +files/avp-20070130-gcc42.patch,
  +avp-20070130-r1.ebuild:
  Fixing gcc-4.2 compilation problem. Bug #184423 by Tristan Heaven

*avp-20070130-r1 (07 Sep 2007)

  07 Sep 2007;  <>  avp-20070130-r1.ebuild files/digest-avp-20070130-r1
  # INSERT ENTRY HERE

*avp-20070130 (30 Jan 2007)

  30 Jan 2007; Tristan Heaven <nyhm@gentoo.org> +avp-20070130.ebuild:
  New snapshot

  13 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  +files/avp-20031110-cleanup.patch, +files/avp-20031110-gentoo.patch:
  Added patches from Tristan Heaven <nyhm@gentoo.org> and Mike Frysinger
  <vapier@gentoo.org> and closing bug #132389.

  05 Oct 2006; Tristan Heaven <nyhm@gentoo.org> avp-20031110.ebuild:
  Remove nvidia-glx version check

  09 Aug 2006; Chris Gianelloni <wolf31o2@gentoo.org> avp-20031110.ebuild: