@@ -3,7 +3,6 @@ AUX avp-20070130-glibc2.10.patch 226 SHA256 423161a9c5ac90737d5621b78300e5cc9103
 DIST avp-20070130.tar.bz2 1523270 SHA256 f857040fc591ff7e8983be4e0d1ca44ea290e6b954ba9a234a6664ff01b4be58 SHA512 1b48f739a72bc90888bf41bff75a079453cb090839edcbf3a6b04c06748e44bd616323633f7979a47e6bc7cd74821735f33c7c4107fa531a3222904082eb7f04 WHIRLPOOL 6c673a3131eeeb52bbf296fbb6ac15fbabdf850fa6cf7a6ee27bc55063cb808f5b36e126a49a293f0d1b3c75941541bc42b41ed4348e9748f50d2f42deb4b780
 DIST avp-20150214.tar.gz 1718303 SHA256 3cfed951482deae709a7e0743ebba9e3ef27aeec2d68d0588e6361b6368a4a85 SHA512 c485a55ff455498bcf82bc17f2056d35d4c646bdf7809f4c326fc7063a9ce5db9e4893af67dff3f6bedb7d5f96e82f792d7f516044fdbab638113091a5505158 WHIRLPOOL 5fd6ee1d893c0feddab44fd84fb7d3bcd231bd337e28bf2089a2120b367bdc5f22bf9ddad5cb0b911065944266fe7d7efb207e64d34b7ba0090c252e74e8efd3
 EBUILD avp-20070130-r1.ebuild 1159 SHA256 c38ae5701afa8d1b5383ff8e57e2743e973af15f709de73e450aa773fa104772 SHA512 3e1aac900349fc69c680e1c195ace8f74ec85691aba2f1db43fe50bead9c7042a664e6018679e9dd47e66d3be2e469e0b99f97a1303b5bea3b6a89acfaf05921 WHIRLPOOL 3f6e80f860eecd5b35d00159adad3cbbf17f688004ca296bf9605c9304944196612e41215387c24b248f6ac831cbbf1ac6cd12805378b013876dd0e9bfec0c48
-EBUILD avp-20070130-r2.ebuild 1246 SHA256 ad758972e5ae200c5107f955c89ec0c5ef293a5917e6cb2652111ad73c27bb6c SHA512 d9ebe01ac2326c4bac209e370b289b2927375f296e60b1c5e08b5b7eca064b879d752ea5bd37ffd4a6b164a9cff48a480d3f04eefaa4cf221904fd730050f8f1 WHIRLPOOL bf6f3ed6de338a39ab2611dcbb22f53c4032e9b52fadc3d459294a10a3e0407d7bdc9143152769bd57b0265bf15ca4ad0b1b5d159b3c339e048ae809af888275
 EBUILD avp-20150214.ebuild 1127 SHA256 d5c9d90c5b9148753f4880ba4ba3cd5bead024c9123d3f5db64eb825eadfbbf5 SHA512 78f1b38e62e90ae8c93516c2c2eac02f4a9f16e6f08cdd5359d214ed46c65eb5104b9f58156c943b468cc759036e35e342b4044666b12824465720c5631d8dba WHIRLPOOL 4aaccb89a7cd630c5507dabc9ab0ef08bcd41570bb920a85f77271e3c440b8f1ca6bcf4efe4db088281f406c2c1506decc00aa28aca9fa62ea43d9e489a0835a
-MISC ChangeLog 3933 SHA256 8160af7a3290674f26d7269aab0840e9990b700c55e6c8f7bb69a8d9ebe673e0 SHA512 436f6efcae85b9354307ca99081fc6a658f6739405fc7c41f6fc326244ec6558781af9e4527fc7dd4d07b53806258c3408d9cdcdc6e4108b0988ee8b270d24d5 WHIRLPOOL 7312462d29a4bfe3fc7bcc24ec6fbc4c4f5b8b0ddf145fed90ff08cc73337efdf84d64eabf4899b3240efdd487e18ce67eba489c3fab80a2416bf4010c05f257
+MISC ChangeLog 4020 SHA256 64c379aa4388527e0a5f5c7dead7b61856866541f949b7f6903a435c673ef76a SHA512 3e3ba2b93157be57646e0d44d09f74e936d9afbfe1685e16ee7d34d86ec1e7326415c64a440f31cf987827417c024ad1062389870a50661cf0a14c99a71ddc00 WHIRLPOOL 6e03f89fb48564bb9ff63eca0370e68ff2aca15e774c627a39aa382e2c346226d3e7e5531ed11198e306ec605fb0338657498e0c1d601b6c4484344c9948041f
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
