@@ -1,12 +1,0 @@
-DEFINED_PHASES=compile configure install postinst preinst prepare setup unpack
-DEPEND=|| ( ( >=media-libs/openal-1.15.1[abi_x86_32(-)] >=media-libs/libsdl-1.2.15-r4[video,joystick,opengl,abi_x86_32(-)] ) amd64? ( app-emulation/emul-linux-x86-sdl[-abi_x86_32(-)] ) ) virtual/pkgconfig
-DESCRIPTION=Linux port of Aliens vs Predator
-EAPI=5
-HOMEPAGE=http://www.icculus.org/avp/
-KEYWORDS=~amd64 ~x86
-LICENSE=AvP
-RDEPEND=|| ( ( >=media-libs/openal-1.15.1[abi_x86_32(-)] >=media-libs/libsdl-1.2.15-r4[video,joystick,opengl,abi_x86_32(-)] ) amd64? ( app-emulation/emul-linux-x86-sdl[-abi_x86_32(-)] ) ) games-misc/games-envd
-SLOT=0
-SRC_URI=mirror://gentoo/avp-20070130.tar.bz2
-_eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	998e5931fb95b10a6a11ec796ada2759	games	1ad3205dbf62a2c98249f2f59b0a2d39	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=3bf8976c96b870f405d9bac027772ec5
