@@ -1,6 +1,9 @@
 # ChangeLog for games-fps/avp
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-fps/avp/ChangeLog,v 1.16 2015/02/24 05:46:19 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-fps/avp/ChangeLog,v 1.17 2015/02/24 06:57:52 mr_bones_ Exp $
+
+  24 Feb 2015; Michael Sterrett <mr_bones_@gentoo.org> -avp-20070130-r2.ebuild:
+  old
 
 *avp-20150214 (24 Feb 2015)
 
